assets/styles/css/bundle.css
.flex-jcsb {
  display: flex;
  justify-content: space-between;
}

.dog-intro {
  position: absolute;
  background-image: url("../../images/sprite.png");
  background-repeat: no-repeat;
  width: 120px;
  height: 100px;
  animation-name: dogMoveHorizontal, dogMoveVertical, dogWalk;
  animation-duration: 3s, 3.6s, 4s;
  animation-timing-function: linear, steps(1, end), step-start;
  animation-fill-mode: forwards, forwards, forwards;
}

.dog-laughs {
  position: absolute;
  left: 700px;
  height: 95px;
  width: 120px;
  background-image: url("../../images/sprite.png");
  animation-name: dogShowHide, dogLaughs;
  animation-iteration-count: 1, 16;
  animation-duration: 2s, .5s;
  animation-timing-function: linear, steps(1, end);
  animation-fill-mode: forwards, forwards;
  z-index: -1;
}

.dog-catch-duck {
  position: absolute;
  left: 750px;
  height: 100px;
  width: 120px;
  background-image: url("../../images/sprite.png");
  background-position: 120px 0;
  animation-name: dogShowHide;
  animation-duration: 2s;
  animation-timing-function: linear;
  animation-fill-mode: forwards;
  z-index: -1;
}

@keyframes dogMoveHorizontal {
  0% {
    left: 0;
  }

  100% {
    left: 50vw;
  }
}

@keyframes dogMoveVertical {
  from {
    bottom: 25px;
  }

  to {
    bottom: 100px;
  }
}

@keyframes dogWalk {
  0% {
    background-position: 0 2px;
  }

  /* walk start */
  3% {
    background-position: -118px 0;
  }

  6% {
    background-position: -240px 0;
  }

  9% {
    background-position: -362px 2px;
  }

  12% {
    background-position: 0 2px;
  }

  15% {
    background-position: -118px 0;
  }

  18% {
    background-position: -240px 0;
  }

  21% {
    background-position: -362px 2px;
  }

  24% {
    background-position: 0 2px;
  }

  27% {
    background-position: -118px 0;
  }

  30% {
    background-position: -240px 0;
  }

  33% {
    background-position: -362px 2px;
  }

  36% {
    background-position: 0 2px;
  }

  39% {
    background-position: -118px 0;
  }

  42% {
    background-position: -240px 0;
  }

  45% {
    background-position: -362px 2px;
  }

  48% {
    background-position: 0 2px;
  }

  51% {
    background-position: -118px 0;
  }

  54% {
    background-position: -240px 0;
  }

  57% {
    background-position: -362px 2px;
  }

  60% {
    background-position: 0 2px;
  }

  63% {
    background-position: -118px 0;
  }

  66% {
    background-position: -240px 0;
  }

  69% {
    background-position: -362px 2px;
  }

  /* Walk */
  72% {
    background-position: -480px 0;
  }

  /* Snif */
  75% {
    background-position: -362px 2px;
  }

  78% {
    background-position: -480px 0;
  }

  81% {
    background-position: -362px 2px;
  }

  90% {
    background-position: -0 -110px;
  }

  /* Find */
  93% {
    background-position: -120px -110px;
  }

  /* Jump */
  96% {
    background-position: -240px -110px;
  }

  100% {
    background-position: 1000px 1000px;
  }

  /* Hide */
}

@keyframes dogShowHide {
  0% {
    bottom: 10px;
  }

  10% {
    bottom: 40px;
  }

  20% {
    bottom: 130px;
  }

  50% {
    bottom: 130px;
  }

  80% {
    bottom: 130px;
  }

  100% {
    bottom: 10px;
  }
}

@keyframes dogLaughs {
  0% {
    background-position: -340px -105px;
    padding-bottom: 0;
  }

  50% {
    background-position: -460px -105px;
    padding-bottom: 5px;
  }

  100% {
    background-position: -340px -105px;
    padding-bottom: 0;
  }
}

.duck-flying, .duck-falling {
  background: url("../../images/sprite.png") no-repeat;
  height: 65px;
  width: 70px;
  position: absolute;
  bottom: 0;
  animation: duckFly--black-up 130ms infinite step-end alternate;
}

.duck-flying {
  clip-path: circle(50% at 50% 50%);
}

.duck-falling {
  background: url("../../images/sprite.png") no-repeat;
  right: 0;
  animation: duckFall--black 90ms infinite step-end alternate;
}

@keyframes duckFly--black-side {
  0% {
    background-position: -260px -226px;
  }

  33% {
    background-position: -340px -230px;
  }

  66% {
    background-position: -420px -240px;
  }
}

@keyframes duckFly--black-straight {
  0% {
    background-position: -260px -393px;
  }

  33% {
    background-position: -340px -393px;
  }

  66% {
    background-position: -420px -395px;
  }
}

@keyframes duckFly--black-up {
  0% {
    background-position: -262px -309px;
  }

  33% {
    background-position: -340px -311px;
  }

  66% {
    background-position: -416px -313px;
  }
}

@keyframes duckFly--blue-side {
  0% {
    background-position: -0px -226px;
  }

  33% {
    background-position: -80px -230px;
  }

  66% {
    background-position: -160px -240px;
  }
}

@keyframes duckFly--blue-straight {
  0% {
    background-position: -0px -393px;
  }

  33% {
    background-position: -80px -393px;
  }

  66% {
    background-position: -160px -395px;
  }
}

@keyframes duckFly--blue-up {
  0% {
    background-position: -0px -309px;
  }

  33% {
    background-position: -78px -311px;
  }

  66% {
    background-position: -154px -313px;
  }
}

@keyframes duckFly--red-side {
  0% {
    background-position: -520px -226px;
  }

  33% {
    background-position: -600px -230px;
  }

  66% {
    background-position: -680px -240px;
  }
}

@keyframes duckFly--red-straight {
  0% {
    background-position: -520px -393px;
  }

  33% {
    background-position: -600px -393px;
  }

  66% {
    background-position: -680px -395px;
  }
}

@keyframes duckFly--red-up {
  0% {
    background-position: -522px -310px;
  }

  33% {
    background-position: -600px -312px;
  }

  66% {
    background-position: -676px -314px;
  }
}

@keyframes duckFall--black {
  0% {
    background-position: -340px -475px;
    transform: scaleX(1);
  }

  50% {
    background-position: -340px -475px;
    transform: scaleX(-1);
  }
}

@keyframes duckFall--blue {
  0% {
    background-position: -80px -475px;
    transform: scaleX(1);
  }

  50% {
    background-position: -80px -475px;
    transform: scaleX(-1);
  }
}

@keyframes duckFall--red {
  0% {
    background-position: -595px -475px;
    transform: scaleX(1);
  }

  50% {
    background-position: -595px -475px;
    transform: scaleX(-1);
  }
}

@font-face {
  font-family: '8bit-font';
  src: url("../../fonts/8bitwonder.ttf");
}

body {
  position: relative;
  cursor: crosshair;
  margin: 0;
  background-color: #3bbcfc;
  font-family: '8bit-font';
  height: 100vh;
  overflow: hidden;
  display: none;
  z-index: 0;
}

.stage-background, .stage-background-with-trees {
  background-image: url("../../images/background-2.png");
  background-repeat: repeat-x;
  background-position: left 0 bottom;
  min-height: 100vh;
  pointer-events: none;
  position: absolute;
  left: 0;
  right: 0;
}

.stage-background-with-trees {
  background-image: url("../../images/background-1.png");
  z-index: -1;
}

.text-table {
  position: absolute;
  text-align: center;
  top: 30%;
  left: 0;
  right: 0;
  z-index: 2;
}

.score-panel {
  background-color: #000;
  border-radius: 3px;
  color: #fff;
  display: none;
  position: absolute;
  bottom: -25px;
  left: 50%;
  transform: translate(-50%, -50%);
  padding: .5em;
  font-size: 1.4vw;
}

.score-panel__counter {
  text-align: center;
}

.score-panel__bullets,
.score-panel__ducks {
  display: flex;
  padding: 0;
  margin-top: .2em;
  margin-bottom: .2em;
}

.score-panel__bullets li {
  background-image: url("../../images/sprite.png");
  background-position: 0 241px;
  height: 20px;
  width: 20px;
  list-style: none;
}

.score-panel__ducks li {
  background-image: url("../../images/sprite.png");
  background-position: -26px 241px;
  height: 20px;
  width: 20px;
  list-style: none;
}

.score-panel__ducks li.shot-failed {
  filter: contrast(3.5);
}

.score-panel__ducks li.shot-successful {
  filter: hue-rotate(144deg) brightness(2.5);
}

.btn.start-btn {
  top: 70%;
  bottom: auto;
  box-shadow: 4px 4px 7px #333;
}

.btn.start-btn:hover {
  cursor: pointer;
  background: #f3b416;
}

.btn {
  position: absolute;
  bottom: 0;
  left: 50%;
  background: black;
  font-size: 2rem;
  color: #fff;
  font-family: inherit;
  padding: .35em .7em;
  border-radius: 3px;
  border: 0;
  transform: translate(-50%, -50%);
}

#play-again {
  display: none;
}

.high-score-text {
  font-size: 1.5rem;
}

.game-logo {
  font-size: 6rem;
  text-shadow: 2px 2px 0 #000, -2px 2px 0 #000, 2px -2px 0 #000, -2px -2px 0 #000;
  position: absolute;
  top: 30%;
  left: 50%;
  white-space: nowrap;
  transform: translate(-50%, -50%);
}

.support-author {
  position: absolute;
  bottom: 5px;
  left: 50%;
  white-space: nowrap;
  transform: translateX(-50%);
  font-size: 1rem;
  font-family: monospace;
  text-shadow: #fff 1px 0 10px;
}

.display-rotation-warning {
  display: none;
  position: absolute;
  top: 40%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 3.5vw;
  padding: 1em;
  color: #fff;
  background-color: #000;
  white-space: nowrap;
}

@media screen and (orientation: portrait) {
  .display-rotation-warning {
    display: block;
  }

  .game-logo,
  #start,
  #play-again {
    display: none;
  }
}

